# aegisvault

./: .gitignore  README.md  pyproject.toml
examples/: demo.sh
rust/: Cargo.toml  pyproject.toml
rust/src/: lib.rs
scripts/: clean-caches.sh  precompile.sh  record_demo.sh
src/ferrovault/: __init__.py  __main__.py  container.py
src/ferrovault/adapters/inbound/: agent.py  cli.py
src/ferrovault/application/: errors.py
src/ferrovault/application/ports/: __init__.py
src/ferrovault/application/services/: access_requests.py  directory.py  dto.py  enterprise.py  identity.py  passkey_unlock.py  policy.py  policy_pack.py  rotation.py  serialization.py  session.py  settings.py  (+5 more)
tests/application/: test_access_requests_sync_gateway.py  test_enterprise_controls.py  test_enterprise_service_integration.py  test_gui_sharing_controller.py  test_passkey_unlock.py  test_settings_policy.py  test_vault_service.py  test_zero_trust_next_features.py
tests/domain/: test_audit.py  test_health.py  test_password_generator.py  test_secret.py  test_shamir.py  test_totp.py  test_vault.py
tests/integration/: test_agent.py  test_audit_export.py  test_audit_stream_view_model.py  test_command_palette_view_model.py  test_crypto_roundtrip.py  test_gui_navigation.py  test_gui_performance_helpers.py  test_gui_performance_next.py  test_gui_smoke.py  test_gui_startup_warmup_hook.py  test_gui_view_models.py  test_import_category.py  test_injection.py  test_recovery.py  test_rust_interop.py  test_security_score_view_model.py  test_sharing.py  test_sqlite_repository.py  test_sync_bundle.py
(+84 files in other folders)
