[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aegisvault"
version = "0.1.0"
description = "AegisVault: an encrypted enterprise secrets vault with a Python/PySide GUI and Rust crypto core."
requires-python = ">=3.10"
readme = "README.md"
dependencies = ["cryptography>=42"]

[project.scripts]
aegisvault = "ferrovault.adapters.inbound.cli:main"
aegisvault-gui = "ferrovault.adapters.inbound.gui.app:main"
aegisvault-qml = "ferrovault.adapters.inbound.gui.qml_app:main"
snekrust = "ferrovault.adapters.inbound.cli:main"
snekrust-gui = "ferrovault.adapters.inbound.gui.app:main"
ferrovault = "ferrovault.adapters.inbound.cli:main"
ferrovault-gui = "ferrovault.adapters.inbound.gui.app:main"

[project.optional-dependencies]
dev = ["pytest>=8"]
gui = ["PySide6>=6.6"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ferrovault.adapters.inbound.gui" = ["fonts/*.ttf", "qml/*.qml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
